[package]
name = "servo_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.1.0", features = ["defmt", "time-driver-only", "stm32h747xi-cm7", "memory-x", "unstable-pac", "exti"]}
embassy-executor = {version = "0.3.3", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"}]
embassy-time = {version="0.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]}
